1. Collection API Улучшения [#70623] v0.1