@@ -1,7 +1,6 @@
 package ru.job4j.list;
 
 import org.junit.Test;
-import java.util.Arrays;
 import java.util.List;
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
@@ -14,11 +13,10 @@ public class ConvertMatrix2ListTest {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expected = List.of(
                 1, 2, 3, 4
         );
-        List<Integer> result = list.toList(input);
-        assertThat(result, is(expect));
+        assertThat(list.toList(input), is(expected));
     }
 
     @Test
@@ -29,10 +27,9 @@ public class ConvertMatrix2ListTest {
                 {0, 4, 5},
                 {6, 0, 7}
         };
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expected = List.of(
                 1, 2, 3, 0, 4, 5, 6, 0, 7
         );
-        List<Integer> result = list.toList(input);
-        assertThat(result, is(expect));
+        assertThat(list.toList(input), is(expected));
     }
 }
